# AgentViz

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  setup_agentapi.sh  test_pty.py
agentviz/: __init__.py  agentviz_wrapper.js  cli.py  monitor.py  server.py  tmux_runner.py  utils.py
agentviz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentviz/adapters/: base.py  claude_adapter.py  codex_adapter.py  gemini_adapter.py  synthetic_adapter.py
backend/: main.py  requirements.txt
benchmarks/: README.md  benchmark_equal.py  benchmark_harness.py  frontend_benchmark.ts  generate_report.py  synthetic_agent.py  unified_agent.py
benchmarks/results/: benchmark_20260217_144115.json  benchmark_20260217_145529.json  benchmark_20260224_004639.json  equal_complex_20260223_225312.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: AgentCard.tsx  AgentCardBadge.tsx  AgentTypeIcon.tsx  DetailDrawer.tsx  FilterBar.tsx  KanbanBoard.tsx  KanbanColumn.tsx  LaunchAgentDialog.tsx  SectionColumn.tsx  SectionsPanel.tsx  SubprocessTree.tsx  TerminalView.tsx
frontend/src/hooks/: useAgentStore.ts
frontend/src/types/: agent.ts
frontend/src/utils/: sorting.ts
scripts/: install.sh
tests/: test_gemini_adapter.py
